Fix: border's too big

--- a/assets/css/404.css
+++ b/assets/css/404.css
@@ -4,12 +4,14 @@
     font-family: "Meiryo";
 }
 
-.fzf {
+.parent {
+    height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
-    min-height: 100vh;
-    text-align: center;
+}
+
+.fzf {
     font-size: 400%;
     animation: anim 1s linear 0s infinite normal both running;
 }
@@ -19,11 +21,14 @@
         transform: rotate(0deg);
         color: red;
     }
-    50% {
+    33% {
         color: green;
+    }
+    66% {
+        color: blue;
     }
     100% {
         transform: rotate(360deg);
-        color: blue;
+        color: red;
     }
 }
